Add partial MTE code s86

--- a/movieAppClient.json
+++ b/movieAppClient.json
@@ -3,6 +3,6 @@
     "endpoints": {
         "register": "/register",
         "login": "/login",
-        "workouts": "/workouts"
+        "movies": "/movies"
     }
 }
