--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fitness-app-client",
+  "name": "movieAppClient",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "notyf": "^3.10.0",
     "react": "^19.2.0",
